Fixed the issues with Co-Reference resolution class. Now it can work with any text that is fed as input.